Changes in footer

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!-- SECCION PIE DE PÁGINA -->
         <footer class="pie-de-pagina text-center text-md-right bg-dark text-white">
             <div class="container">
-                <p class="m-0 py-3">Diego Mateos &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Copyright © 2020. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; diegomateos093@gmail.com</p>
+                <p class="m-0 py-3"><strong>Contact: </strong>diegomateos093@gmail.com</p>
             </div>
         </footer>
 </body>
