--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="css/style.css">
-    <title>Python Basics</title>
+    <title>Python</title>
 </head>
 <body>
     <!-- SECCION NAVEGACIÓN-->
@@ -31,7 +31,7 @@
     <!-- SECCION PYTHON-->
     <div class="p-4 mt-5">
 
-        <h1 class="text-center">Python</h1>
+        <h1 class="text-center">Reasons to choose Python as your programming language</h1>
 
         <div class="p-2">
             <h3>Features of Python programming language</h3>
