Changes in title

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- SECCION PYTHON-->
     <div class="p-4 mt-5">
 
-        <h1 class="text-center">Reasons to choose Python as your programming language</h1>
+        <h1 class="text-center">Reasons to choose Python</h1>
 
         <div class="p-2">
             <h3>Features of Python programming language</h3>
