python image added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
     <!-- SECCION PYTHON-->
     <div class="p-4 mt-5">
 
-        <h1 class="text-center">Reasons to choose Python</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <img src="images/python.png" alt="Python logo" class="img-fluid mb-4 mb-md-0">
+                </div>
+                <div class="col-12 text-center text-md-left align-self-md-center">
+                    <h1 class="text-center">Reasons to choose Python</h1>
+                </div>
+            </div>
+        </div>
 
         <div class="p-2">
             <h3>Features of Python programming language</h3>
