--- a/index.html
+++ b/index.html
@@ -114,11 +114,17 @@
 
     </div>
 
-        <!-- SECCION PIE DE PÁGINA -->
-        <footer class="pie-de-pagina text-center text-md-right bg-dark text-white">
-            <div class="container">
-                <p class="m-0 py-3"><strong>Contact: </strong>diegomateos093@gmail.com</p>
-            </div>
-        </footer>
+    <!-- SECCION PIE DE PÁGINA -->
+    <footer class="pie-de-pagina text-center text-md-right bg-dark text-white">
+        <div class="container">
+            <p class="m-0 py-3"><strong>Contact: </strong>diegomateos093@gmail.com</p>
+        </div>
+    </footer>
+
+
+
+        
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
 </body>
 </html>
