--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li><strong>Readable: </strong>Python is a very readable language.</li>
                 <li><strong>Easy to Learn: </strong>Learning python is easy as this is a expressive and high level programming language, which means it is easy to understand the language and thus easy to learn.</li>
                 <li><strong>Cross platform: </strong>Python is available and can run on various operating systems such as Mac, Windows, Linux, Unix etc. This makes it a cross platform and portable language.</li>
-                <li><strong>Open Source: </strong>Python is a open source programming language.</li>
+                <li><strong>Open Source: </strong>Python is an open source programming language.</li>
                 <li><strong>Large standard library: </strong>Python comes with a large standard library that has some handy codes and functions which we can use while writing code in Python.</li>
                 <li><strong>Free: </strong>Python is free to download and use. This means you can download it for free and use it in your application. Python is an example of a FLOSS (Free/Libre Open Source Software), which means you can freely distribute copies of this software, read its source code and modify it.</li>
                 <li><strong>Supports exception handling: </strong>If you are new, you may wonder what is an exception? An exception is an event that can occur during program exception and can disrupt the normal flow of program. Python supports exception handling which means we can write less error prone code and can test various scenarios that can cause an exception later on.</li>
@@ -124,7 +124,9 @@
 
 
         
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 </html>
